# udscast

./: CMakeLists.txt  INSTALL.md  LICENSE  Makefile.am  README.md  configure.ac  udscast.pc.in
src/: Makefile.am  main.c  main.h  socket.c  socket.h
src/cmd/: cmdline.c  cmdline.h  genc  opt.ggo
